@@ -4,6 +4,8 @@ Date: 2025-04-11
   Features:
     - Added freezing and thawing recipes
     - Added locale for subgroups and categories
+  Changes:
+    - Herbarium requires nutrients just like biochamber
   Bugfixes:
     - Fixed algae-spore recipe
     - Fixed agricultural science pack recipe
